# kp_tblg

./: .gitmodules  CMakeLists.txt  README
MATLAB_vers/: README  bz_surface_plotting_utility.m  interp_kp_dos.m  interp_kp_dos_gaussian.m  interp_kp_ldos.m  kp_demo.m  ldos_kp_demo.m  parse_datafile.m  tblg_kp_calc_ext.m  tblg_kp_calc_ext_getH.m
MATLAB_vers/kp_model_construction_tools/: README  global_vars.m  kp_band_calc_job.m  kp_param_extract_job.m  parameter_extract_job.m  run_script.sh  run_script_local.sh  tbh_band_calc_job.m  tbh_setup_job.m
MATLAB_vers/kp_model_construction_tools/anglesweep_ext_01-06-2019/: TwBLG_KP_sym_enforce_inter.m  dft_full_relax_data_01-06-2019.mat  dos_plot_tester.m  generate_k_line.m  interp_kp_dos.m  kp_anglesweep_parser.m  kp_terms_filewriter.m  kp_terms_plotter.m  tblg_kp_calc_ext.m  vf_sweep_data_gen.m
MATLAB_vers/kp_model_construction_tools/kp_bands/: TwBLG_relax_KP_kdep_ver2.m  kp_band_calc_lambda_nn.m
MATLAB_vers/kp_model_construction_tools/kp_fit/: KP_construct.m  KP_construct_eff_theory.m  KP_construct_eff_theory_relax_ext.m  KP_construct_eff_theory_relax_miller.m
MATLAB_vers/kp_model_construction_tools/post_proc/: band_compare.m
MATLAB_vers/kp_model_construction_tools/tbh_bands/: Rec_bands.m  ham_supercell_N8_Koshino_relax_height.m  ham_supercell_N8_Koshino_relax_height_sparse.m
MATLAB_vers/kp_model_construction_tools/tbh_construct/: Extract_TBH_BZ.m  Extract_TBH_BZ0.m  Extract_TBH_BZb.m  Extract_TBH_no_BZ.m  Relax_model_Stephen_ver3.m  bernal_stacking_band_calc.m  build_supercell_ham.m  dft_interlayer_coupling.m  extract_tbh_ksamp.m  graphene_setup_supercell.m  graphene_setup_supercell_2.m  graphene_setup_supercell_relax_ver2.m  jump_pcs.m  list_vec.m  moveto_primitive_method2.m  plot_relaxed_supercell.m  relax_sym_tester.m
MATLAB_vers/wannierization/: README
MATLAB_vers/wannierization/5band/: README  bands_from_hmat_5band.m  check_final_bands.m  generate_hmat_datafile_5band.m  real_space_sym_5band.m  rewannier_aapm_5band.m  tblg_wan_run_5band.m  wf_symm_viewer_5band.m
MATLAB_vers/wannierization/8band/: Generate_8band_TBH_perturb.m  Generate_8band_TBH_perturb_rewan.m  Generate_8band_TBH_sym_ver4.m  README  bands_from_hmat.m  bands_from_hmat_asci.m  check_final_bands.m  generate_hmat_datafile.m  perturb_band_kp_calc.m  perturb_tests.m  real_space_sym.m  rewannier_aapm.m  tblg_wan_run.m  wf_spread_and_viewer.m  wf_symm_viewer.m
app/src/: CMakeLists.txt  main.cpp
pysrc/: bandcalc.py  check_H_connections.py  generate_H_example.py  main.cpp  tester.py
src/: CMakeLists.txt  kp_tblg_construct.cpp  kp_tblg_construct.h
(+99 files in other folders)
